# vcsmc

./: .gitignore  ESS_primates.ipynb  README.md  all.py  constants.py  distance_utils.py  distances.py  encoder_decoder.py  encoders.py  load_phy.py  markov.py  nohup.out  phy.py  poincare_utils.py  proposal.py  proposals.py  pyproject.toml  q_matrix.py  q_matrix_decoders.py  requirements.txt  run.sh  simulate.py  site_positions_encoders.py  test.ipynb  train.py  train_utils.py  type_utils.py  utils.py  vcsmc.py  vcsmc_benchmark.py  vcsmc_regularization.py  vcsmc_utils.py  vncsmc_benchmark.py
data/: betacorona.phy  fish.phy  primates.phy  shearwater.phy
data/hohna/: DS1.phy  DS10.phy  DS11.phy  DS2.phy  DS3.phy  DS4.phy  DS5.phy  DS6.phy  DS7.phy  DS8.phy  DS9.phy
expm/: __init__.py  expm_taylor.py
figures/: figures_util.py  hyp_smc_benchmark.py  hyp_smc_dim.py  hyp_smc_init_mean.py  proposal_K.py
iclr_figures/: plot_q.ipynb  plots.ipynb
iclr_figures/data/: compare_q_matrix.csv  effect_of_k.csv  effect_of_k_lookahead.csv  large_benchmarks.csv  large_benchmarks_nested.csv  primates_benchmark.csv  stationary_primates.csv  wall_clock.csv  wall_clocks.csv
paper/: .gitignore  paper.tex
paper/figures/: ll_estimates_for_different_methods.py
scripts/: hyp_smc_benchmark.py  hyp_smc_dim.py  hyp_smc_init_mean.py  hyp_train.py  hyp_train_hybrid.py  train_driver.py
scripts/benchmark/: hyp_smc_benchmark.py  hyp_smc_benchmark_old.py
scripts/benchmarks/: hyp_smc_benchmark.py
scripts/experiments/: different_proposals_and_K.py  embedding_initialization.py
scripts/figures/: hyp_smc_dim.py  hyp_smc_init_mean.py  proposal_K.py
scripts/train/: euclidean_train.py  hyp_train.py  hyp_train_hybrid.py
scripts/utils/: estimate_latest_run_ll.py
vcsmc/: __init__.py  distances.py  embedding_initializer.py  encoder_utils.py  encoders.py  manifolds.py  phy.py  poincare_utils.py  proposals.py  q_matrix_decoders.py  site_positions_encoders.py  train.py  train_utils.py  vcsmc.py  vcsmc_regularization.py  vcsmc_utils.py
vcsmc/expm/: __init__.py  expm_simple.py  expm_taylor.py
vcsmc/fast_bmm/: README.md  __init__.py  fast_bmm_2x2.py  fast_bmm_3x3.py  fast_bmm_4x4.py
vcsmc/utils/: embedding_distance_mse.py  poincare_utils.py  repr_utils.py  train_types.py  train_utils.py  vcsmc_types.py  vcsmc_utils.py  (+1 more)
(+6 files in other folders)
